# brightness

./: CMakeLists.txt
.github/workflows/: android-deploy.yml  api-deploy.yml
api/info/: index.ts  package-lock.json  package.json
device/: .clang-format  CMakeLists.txt
device/src/: ble.c  crypto.c  device.c  device.h  driver.c  driver.h  error.h  mbedtls_config.h  pka.in.h
mobile/: package-lock.json  package.json
mobile/src/: App.vue
mobile/src-tauri/capabilities/: default.json
mobile/src/composable/: useDevice.ts
mobile/src/util/: auth.ts
src/: device.h  driver.c  error.c  error.h  main.c
web/: package-lock.json  package.json
web/src/: App.vue
web/src/components/: ColorSelect.vue  DrawingBoard.vue  DrawingCell.vue
